test restoring theme

--- a/public/404.html
+++ b/public/404.html
@@ -41,7 +41,7 @@
                 <a href="/blogge/" style="text-decoration: none;">
                     <div class="logo">
                       
-                            Terminimal theme
+                            Writing Place
                         
                     </div>
                 </a>
