remove underscore prefix for site assets

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
 
 
         <br>
-        <img src="images/_birb.png" style="position: center; width: 40vh;">
+        <img src="images/birb.png" style="position: center; width: 40vh;">
     </div>
 
 
