--- a/public/info/index.html
+++ b/public/info/index.html
@@ -82,7 +82,7 @@
     
     
   
-  <img src="/blogge/images/_flower.png" class="center" style="width: 43vh;" />
+  <img src="/blogge/images/flower.png" class="center" style="width: 43vh;" />
 
 <br>
 <p>Here is my <a href="https://callumbeaney.github.io/index.html">personal website</a>.<br />
