--- a/public/info/index.html
+++ b/public/info/index.html
@@ -87,6 +87,7 @@
 <br>
 <p>Here is my <a href="https://callumbeaney.github.io/index.html">personal website</a>.<br />
 Here is my <a href="https://github.com/CallumBeaney">Github profile</a>.<br />
+I am a part of <a href="https://goodpals.dev">Goodpals</a> and <a href="https://mother-type.de">MotherType</a>.<br />
 This site was built with <a href="https://www.getzola.org/">Zola</a>,<br />
 　and <a href="https://github.com/pawroman">pawroman</a>'s <a href="https://github.com/pawroman/zola-theme-terminimal/">Terminimal</a> theme.</p>
 
