email fix, removed semi-completed article

--- a/public/info/index.html
+++ b/public/info/index.html
@@ -87,7 +87,7 @@
 　articles with <a href="https://c4journal.com/about/">C4 Journal</a>.</p>
 <!-- 　typefaces with [Mother](https://mother-type.de), and   -->
 <p>Contact me at<br />
-　beaneyc〇protonₒme</p>
+　calbeaney〇protonₒme</p>
 <p>This site was built with <a href="https://www.getzola.org/">Zola</a>,<br />
 　and <a href="https://github.com/pawroman">pawroman</a>'s <a href="https://github.com/pawroman/zola-theme-terminimal/">Terminimal</a> theme.</p>
 </div>
