--- a/public/music/index.html
+++ b/public/music/index.html
@@ -125,7 +125,7 @@ Click an album cover to listen.</p>
     <a href="https://www.youtube.com/watch?v=pafNgzGRjFk"><img src="https://upload.wikimedia.org/wikipedia/en/3/3b/The_Bedlam_in_Goliath_%28The_Mars_Volta_album_-_cover_art%29.jpg" alt="mars vola"></a>
   </div>
   <div class="grid-item">
-    <a href="https://www.youtube.com/watch?v=R_3u7aspmDY"><img src="https://e.snmc.io/i/600/s/9d0c54cf9e60cb844008038e4fcda66d/6214316/mew-frengers-Cover-Art.png" alt="frengers"></a>
+    <a href="https://www.youtube.com/watch?v=R_3u7aspmDY"><img src="https://upload.wikimedia.org/wikipedia/en/4/41/Frengers.jpg" alt="frengers"></a>
   </div>
   <div class="grid-item">
     <a href="https://mfdoom.bandcamp.com/track/one-beer"><img src="https://f4.bcbits.com/img/a2625942251_65" alt="mf doom"></a>
@@ -204,9 +204,6 @@ Click an album cover to listen.</p>
   </div>
   <div class="grid-item">
     <a href="https://submotionorchestra.bandcamp.com/album/finest-hour"><img src="https://f4.bcbits.com/img/a2343263499_7.jpg" alt=""></a>
-  </div>
-<div class="grid-item">
-    <a href="https://www.discogs.com/master/933430-Vàg-Music-For-Smoke-Filled-Elevators"><img src="https://e.snmc.io/i/600/s/773fd19f3a3558b4a906ee43eb142382/6306411/vag-music-for-smoke-filled-elevators-Cover-Art.jpg" alt="vag"></a>
   </div>
 <!-- <div class="grid-item">
     <a href=""><img src="" alt=""></a>
